--- a/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Home/Index.cshtml
@@ -2,212 +2,63 @@
     ViewBag.Title = "Home Page";
 }
 
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+    <title>Starter Template - Materialize</title>
+    <!-- CSS  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+</head>
+<body>
 
-    <!-- Page Layout here -->
-    <div class="row">
-        <div class="col s0 m0 l2">&nbsp</div>
-
-        <!-- Cards container -->
-        <div class="col s12 m12 l8">
-            <h4>Events</h4>
-            <div class="row">
-                <!-- Col: Card 1 -->
-                <div class="col s12 m6 l4">
-                    <!-- Card 1 -->
-                    <div class="card">
-                        <div class="card-content white-text">
-                            <div class="card__date">
-                                <span class="card__date__day">23</span>
-                                <span class="card__date__month">Mai</span>
-                            </div>
-                            <div class="card__meta">
-                                <a href="#"><i class="small material-icons">room</i>Web Design</a>
-                                <time>17th March</time>
-                            </div>
-                            <span class="card-title grey-text text-darken-4">Savoy swing up</span>
-
-                            <p class="card-subtitle grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia...lacus eleifend lacinia... go!</p>
-                            <span class="blue-text text-darken-2 card-info"><i class="small material-icons">label</i>&nbsp;lindy hop, balboa, charleston</span>
-                            <h5 class="red-text"><i class="fa fa-futbol-o"></i> Deporte</h5>
-                        </div>
-                        <div class="card-action">
-                            <a href="#"><i class="material-icons">&nbsp;language</i>VISIT WEB</a>
-                            <a href="#" class="card-action-right"><i class="material-icons">&nbsp;room</i>FIND</a>
-                        </div>
-                    </div>
-                    <!-- End of card -->
-                </div>
-                <!-- End of col -->
-                <!-- Col: Card 1 -->
-                <div class="col s12 m6 l4">
-                    <!-- Card 1 -->
-                    <div class="card">
-                        <div class="card-content white-text">
-                            <div class="card__date">
-                                <span class="card__date__day">23</span>
-                                <span class="card__date__month">Mai</span>
-                            </div>
-                            <div class="card__meta">
-                                <a href="#"><i class="small material-icons">room</i>Web Design</a>
-                                <time>17th March</time>
-                            </div>
-                            <span class="card-title grey-text text-darken-4">Savoy swing up</span>
-
-                            <p class="card-subtitle grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia...lacus eleifend lacinia... go!</p>
-                            <span class="blue-text text-darken-2 card-info"><i class="small material-icons">label</i>&nbsp;lindy hop, balboa, charleston</span>
-                        </div>
-                        <div class="card-action">
-                            <a href="#"><i class="material-icons">&nbsp;language</i>VISIT WEB</a>
-                            <a href="#" class="card-action-right"><i class="material-icons">&nbsp;room</i>FIND</a>
-                        </div>
-                    </div>
-                    <!-- End of card -->
-                </div>
-                <!-- Col: Card 1 -->
-                <div class="col s12 m6 l4">
-                    <!-- Card 1 -->
-                    <div class="card">
-                        <div class="card-content white-text">
-                            <div class="card__date">
-                                <span class="card__date__day">23</span>
-                                <span class="card__date__month">Mai</span>
-                            </div>
-                            <div class="card__meta">
-                                <a href="#"><i class="small material-icons">room</i>Web Design</a>
-                                <time>17th March</time>
-                            </div>
-                            <span class="card-title grey-text text-darken-4">Savoy swing up</span>
-
-                            <p class="card-subtitle grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia...lacus eleifend lacinia... go!</p>
-                            <span class="blue-text text-darken-2 card-info"><i class="small material-icons">label</i>&nbsp;lindy hop, balboa, charleston</span>
-                        </div>
-                        <div class="card-action">
-                            <a href="#"><i class="material-icons">&nbsp;language</i>VISIT WEB</a>
-                            <a href="#" class="card-action-right"><i class="material-icons">&nbsp;room</i>FIND</a>
-                        </div>
-                    </div>
-                    <!-- End of card -->
-                </div>
-
+    <div class="section no-pad-bot" id="index-banner">
+        <div class="container">
+            <br><br>
+            <h1 class="header center green-text">Bienvenidos</h1>
+            <div class="row center">
+                <h5 class="header col s12 light">¡Aquí podrás encontrar los eventos más cercanos a ti!</h5>
             </div>
         </div>
     </div>
 
-
-<div class="card-deck">
-    <div class="card card-cascade narrower">
-
-        <!--Card image-->
-        <div class="view overlay hm-white-slight">
-            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%2813%29.jpg" class="img-fluid" alt="">
-            <a>
-                <div class="mask waves-effect waves-light"></div>
-            </a>
+    <div class="container">
+        <div class="section">
+            <!--   Icon Section   -->
+            <div class="row">
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+                        <h5 class="center">Encuentra fácilmente</h5>
+                        <p class="light">Hay muchas formas de buscar tus eventos favoritos para que nunca te pierdas ninguno!. Ofrecemos búsqueda por localidad, país, categoría, etc.</p>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+                        <h5 class="center">Únete a esta comunidad</h5>
+                        <p class="light">Al pertenecer a ella, podrás ver la reputación de cada evento e inclusive intercambiar opiniones con el resto de personas que hayan asistido.</p>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+                        <h5 class="center">Te ayudamos</h5>
+                        <p class="light">Si deseas que tu evento sea realmente grandioso y grande, puedes promocionar tus eventos con nosotros!.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!--/.Card image-->
-        <!--Card content-->
-        <div class="card-block">
-            <h5 class="red-text"><i class="fa fa-futbol-o"></i> Deporte</h5>
-            <!--Title-->
-            <h4 class="card-title">Evento 1</h4>
-            <!--Text-->
-            <p class="card-text">Información de evento.</p>
-            <p class="card-text"><small class="text-muted">Creado por Usuario</small></p>
+        <br><br>
+        <div class="section">
         </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-                <i class="fa fa-calendar fa-fw"></i>
-                Fecha
-            </li>
-            <li class="list-group-item">
-                <i class="fa fa-clock-o fa-fw"></i>
-                Hora
-            </li>
-
-            <li class="list-group-item">
-                <i class="fa fa-map-marker fa-fw"></i>
-                Ubicación
-            </li>
-        </ul>
-        <a class="btn btn-primary">Ver evento</a>
-        <!--/.Card content-->
-
     </div>
-    <div class="card card-cascade narrower">
-
-        <!--Card image-->
-        <div class="view overlay hm-white-slight">
-            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%2840%29.jpg" class="img-fluid" alt="">
-            <a>
-                <div class="mask waves-effect waves-light"></div>
-            </a>
-        </div>
-        <!--/.Card image-->
-        <!--Card content-->
-        <div class="card-block">
-            <h5 class="blue-text"><i class="fa fa-music"></i> Música</h5>
-            <!--Title-->
-            <h4 class="card-title">Evento 2</h4>
-            <!--Text-->
-            <p class="card-text">Información de evento.</p>
-            <p class="card-text"><small class="text-muted">Creado por Usuario</small></p>
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-                <i class="fa fa-calendar fa-fw"></i>
-                Fecha
-            </li>
-            <li class="list-group-item">
-                <i class="fa fa-clock-o fa-fw"></i>
-                Hora
-            </li>
-
-            <li class="list-group-item">
-                <i class="fa fa-map-marker fa-fw"></i>
-                Ubicación
-            </li>
-        </ul>
-        <a class="btn btn-primary">Ver evento</a>
-        <!--/.Card content-->
-
-    </div>
-    <div class="card card-cascade narrower">
-
-        <!--Card image-->
-        <div class="view overlay hm-white-slight">
-            <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%2842%29.jpg" class="img-fluid" alt="">
-            <a>
-                <div class="mask waves-effect waves-light"></div>
-            </a>
-        </div>
-        <!--/.Card image-->
-        <!--Card content-->
-        <div class="card-block">
-            <h5 class="green-text"><i class="fa fa-picture-o"></i> Arte</h5>
-            <!--Title-->
-            <h4 class="card-title">Evento 3</h4>
-            <!--Text-->
-            <p class="card-text">Información de evento.</p>
-            <p class="card-text"><small class="text-muted">Creado por Usuario</small></p>
-        </div>
-
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-                <i class="fa fa-calendar fa-fw"></i>
-                Fecha
-            </li>
-            <li class="list-group-item">
-                <i class="fa fa-clock-o fa-fw"></i>
-                Hora
-            </li>
-
-            <li class="list-group-item">
-                <i class="fa fa-map-marker fa-fw"></i>
-                Ubicación
-            </li>
-        </ul>
-        <a class="btn btn-primary">Ver evento</a>
-        <!--/.Card content-->
-
-    </div>
-</div> 
+   
+    <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
+</body>
+</html>
