--- a/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
@@ -5,18 +5,53 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<br />
 
-<div class="card">
-    <div class="card-header">@Html.DisplayFor(model => model.NombreEvento)</div>
-    <img class="card-img-top" src="@Html.DisplayFor(model => model.RutaImagen)" alt="Card image cap" />
+<div class="card #00897b teal darken-1 hoverable">
+    @if (Model.RutaImagen != null)
+    {
+        <div class="card-image">
+            <img src="@Html.DisplayFor(modelItem => Model.RutaImagen)">
+        </div>
+    }
+    <div class="card-content white-text">
 
-    <div class="card-block">
-        
-        <p class="card-text">@Html.DisplayFor(model => model.Descripcion) </p>
+        <div class="col s12 m12 right-align">
+            <span class="card-info card-event-detail-info"><i class="@Html.getIcon(@Html.DisplayFor(modelItem => Model.IdCategoria).ToString())"></i> @Html.DisplayFor(modelItem => Model.IdCategoria) </span>
+        </div>
 
-        <div id="map" style="width:100%;height:300px;"></div>
+        <span class="card-title text-darken-4">@Html.DisplayFor(modelItem => Model.NombreEvento)</span>
+        <p class="card-subtitle text-darken-2">@Html.DisplayFor(modelItem => Model.Descripcion)</p>
+        <p class="card-text"><small class="text-muted">Creado por @Html.getNameUser(id: @Html.DisplayFor(modelItem => Model.IdUser).ToString())</small></p>
+        <hr />
+
+        <!-- IdUser -->
+
+        <div class="row card-row">
+            <div class="col s12 m6">
+                <span class="card-info card-event-detail-info"><i class="fa fa-calendar-times-o"></i> @Html.DisplayFor(modelItem => Model.FechaInicio) - @Html.DisplayFor(modelItem => Model.FechaFin)</span>
+            </div>
+            <div class="col s12 m6">
+                <span class="card-info card-event-detail-info"><i class="fa fa-clock-o"></i> @Html.DisplayFor(modelItem => Model.HoraInicio) - @Html.DisplayFor(modelItem => Model.HoraFin)</span>
+            </div>
+        </div>
+
+        <div class="row card-row">
+            <div class="col s12 m6">
+                <span class="card-info card-event-detail-info"><i class="fa fa-address-card-o"></i> @Html.DisplayFor(modelItem => Model.Direccion)</span>
+            </div>
+            <!--<div class="col s12 m6">
+                <span class="card-info card-event-detail-info">12.00 €</span>
+            </div>-->
+        </div>
+        <hr />
+
+        <div id = "map" style="width:100%;height:300px;"></div>
+        <hr />
+
     </div>
 </div>
+
 
 
 @* ------------------------------------------------------------------------------------------------------------ *@
