--- a/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
@@ -52,6 +52,12 @@
     </div>
 </div>
 
+<div class="fixed-action-btn">
+    <a class="btn-floating btn-large green" href="~/Events/Edit/@Model.Id">
+        <i class="large material-icons">mode_edit</i>
+    </a>
+</div>
+
 
 
 @* ------------------------------------------------------------------------------------------------------------ *@
