--- a/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Create.cshtml
@@ -68,12 +68,12 @@
 
         <div class="form-group">
             <div class="col-md-10">
-                @Html.CheckBoxFor(model => model.Destacado, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.CheckBoxFor(model => model.Destacado, new { @class = "form-control", type = "checkbox"})
                 @Html.LabelFor(model => model.Destacado, htmlAttributes: new { @class = "control-label col-md-2" })
             </div>
         </div>
 
-        <h4>Arrastre el marcador hacia la ubicación del evento</h4>
+        <blockquote>Arrastre el marcador hacia la ubicación del evento</blockquote>
 
         <div id="map" style="width:100%;height:600px;"></div>
 
