--- a/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
     <title>@ViewBag.Title - GlobalEvents</title>
 
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/scss")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jquery")
