--- a/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Edit.cshtml
@@ -5,36 +5,36 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<br />
 
 @using (Html.BeginForm("Edit", "Events", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h3>Events</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-        <div class="md-form">
+        <div class="input-field col-md-12 s12">
             @Html.EditorFor(model => model.NombreEvento, new { htmlAttributes = new { @class = "form-control" } })
             @Html.LabelFor(model => model.NombreEvento)
             @Html.ValidationMessageFor(model => model.NombreEvento, "", new { @class = "text-danger" })
         </div>
 
-        <div class="md-form">
+        <div class="input-field col-md-12 s12">
             @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
             @Html.LabelFor(model => model.Descripcion)
             @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
         </div>
 
-        <div class="md-form">
+        <div class="input-field col-md-12 s12">
             @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
             @Html.LabelFor(model => model.Direccion)
             @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
         </div>
 
-        <div class="form-group">
+        <div class="input-field col-md-12 s12">
             @Html.LabelFor(model => model.FechaInicio, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FechaInicio, new { htmlAttributes = new { @class = "form-control", type = "date" } })
@@ -42,12 +42,12 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="input-field col-md-12 s12">
             <h6> Hora Inicio:</h6>
             <input class="text-box single-line col-2" id="HoraInicio" name="HoraInicio" type="time" value="@Model.HoraInicio" />
         </div>
 
-        <div class="form-group">
+        <div class="input-field col-md-12 s12">>
             @Html.LabelFor(model => model.FechaFin, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FechaFin, new { htmlAttributes = new { @class = "form-control", type = "date" } })
@@ -55,12 +55,12 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="input-field col-md-12 s12">
             <h6> Hora Fin:</h6>
             <input class="text-box single-line col-2" id="HoraFin" name="HoraFin" type="time" value="@Model.HoraFin" />
         </div>
 
-        <div class="form-group">
+        <div class="input-field col-md-12 s12">
             @Html.EnumDropDownListFor(model => model.IdCategoria, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.IdCategoria, "", new { @class = "text-danger" })
         </div>
@@ -72,7 +72,7 @@
             </div>
         </div>
 
-        <h4>Arrastre el marcador hacia la ubicación del evento</h4>
+        <blockquote>Arrastre el marcador hacia la ubicación del evento</blockquote>
 
         @* ------------------------------------------------------------------------------------------------------------ *@
 
